Complete documentation for config ice Rest methods
