# api/rest/iceconfig.go
@@ -6,7 +6,7 @@ import (
 	"io/ioutil"
 	"net/http"
 
-	"github.com/duality-solutions/web-bridge/configs/settings"
+	"github.com/duality-solutions/web-bridge/api/models"
 	"github.com/gin-gonic/gin"
 )
 
@@ -14,8 +14,7 @@ import (
 // @Description Returns all the ICE servers in current running configuration
 // @Accept  json
 // @Produce  json
-// @Success 200 {string} string	"ok"
-// @Failure 400 {string} string "Bad request"
+// @Success 200 {object} []models.IceServerConfig	"ok"
 // @Failure 500 {object} string "Internal error"
 // @Router /api/v1/ice [get]
 func (w *WebBridgeRunner) getice(c *gin.Context) {
@@ -26,7 +25,7 @@ func (w *WebBridgeRunner) getice(c *gin.Context) {
 	}
 }
 
-func (w *WebBridgeRunner) findIceSetting(iceSetting settings.IceServerConfig) (int, error) {
+func (w *WebBridgeRunner) findIceSetting(iceSetting models.IceServerConfig) (int, error) {
 	if w.configuration == nil {
 		return -1, fmt.Errorf("configuration variable is null")
 	}
@@ -43,7 +42,8 @@ func (w *WebBridgeRunner) findIceSetting(iceSetting settings.IceServerConfig) (i
 // @Description Add or update an ICE server in current configuration and saves the changes to file
 // @Accept  json
 // @Produce json
-// @Success 200 {string} string	"ok"
+// @Param body body models.IceServerConfig true "ICE Configuration"
+// @Success 200 {object} []models.IceServerConfig	"ok"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {object} string "Internal error"
 // @Router /api/v1/ice [put]
@@ -59,7 +59,7 @@ func (w *WebBridgeRunner) putice(c *gin.Context) {
 			c.JSON(http.StatusBadRequest, gin.H{"error": "Request body is empty. Can not add ICE server to configuration."})
 			return
 		}
-		req := settings.IceServerConfig{}
+		req := models.IceServerConfig{}
 		err = json.Unmarshal(body, &req)
 		if err != nil {
 			strErrMsg := fmt.Sprintf("Request body JSON unmarshal error %v. Can not add ICE server to configuration.", err)
@@ -87,7 +87,8 @@ func (w *WebBridgeRunner) putice(c *gin.Context) {
 // @Description Delete an ICE server in current configuration and saves the changes to file
 // @Accept  json
 // @Produce json
-// @Success 200 {string} string	"ok"
+// @Param body body models.IceServerConfig true "ICE Configuration"
+// @Success 200 {object} []models.IceServerConfig	"ok"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {string} string "Internal error"
 // @Router /api/v1/ice [delete]
@@ -108,7 +109,7 @@ func (w *WebBridgeRunner) deleteice(c *gin.Context) {
 			c.JSON(http.StatusBadRequest, gin.H{"error": "Request body is empty. Can not detele from ICE server configuration list."})
 			return
 		}
-		req := settings.IceServerConfig{}
+		req := models.IceServerConfig{}
 		err = json.Unmarshal(body, &req)
 		if err != nil {
 			strErrMsg := fmt.Sprintf("Request body JSON unmarshal error %v. Can not detele from ICE server configuration list.", err)
@@ -137,7 +138,8 @@ func (w *WebBridgeRunner) deleteice(c *gin.Context) {
 // @Description Replaces an ICE server in current configuration and saves the changes to file
 // @Accept  json
 // @Produce  json
-// @Success 200 {string} string	"ok"
+// @Param body body models.ConfigurationFile true "ICE Configuration File"
+// @Success 200 {object} models.ConfigurationFile	"ok"
 // @Failure 400 {string} string "Bad request"
 // @Failure 500 {string} string "Internal error"
 // @Router /api/v1/ice [post]
@@ -153,7 +155,7 @@ func (w *WebBridgeRunner) replaceice(c *gin.Context) {
 			c.JSON(http.StatusBadRequest, gin.H{"error": "Request body is empty. Can not detele from ICE server configuration list."})
 			return
 		}
-		req := settings.ConfigurationFile{}
+		req := models.ConfigurationFile{}
 		err = json.Unmarshal(body, &req)
 		if err != nil {
 			strErrMsg := fmt.Sprintf("Request body JSON unmarshal error %v. Can not detele from ICE server configuration list.", err)
