# docs/swagger.json
@@ -31,13 +31,10 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.IceServerConfig"
+                            }
                         }
                     },
                     "500": {
@@ -56,11 +53,25 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "description": "ICE Configuration",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.IceServerConfig"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.IceServerConfig"
+                            }
                         }
                     },
                     "400": {
@@ -87,18 +98,20 @@
                 ],
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Some ID",
-                        "name": "some_id",
-                        "in": "path",
-                        "required": true
+                        "description": "ICE Configuration File",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfigurationFile"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.ConfigurationFile"
                         }
                     },
                     "400": {
@@ -123,11 +136,25 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "description": "ICE Configuration",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.IceServerConfig"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.IceServerConfig"
+                            }
                         }
                     },
                     "400": {
@@ -142,6 +169,36 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.ConfigurationFile": {
+            "type": "object",
+            "properties": {
+                "IceServers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.IceServerConfig"
+                    }
+                }
+            }
+        },
+        "models.IceServerConfig": {
+            "type": "object",
+            "properties": {
+                "Credential": {
+                    "description": "The ICE server's credentials. Leave blank if it doesn't apply",
+                    "type": "string"
+                },
+                "URL": {
+                    "description": "The ICE server's full URL with protocol prefix and port: turn:ice.bdap.io:3478",
+                    "type": "string"
+                },
+                "UserName": {
+                    "description": "The ICE server's user name. Leave blank if it doesn't apply",
+                    "type": "string"
                 }
             }
         }
